--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -64,7 +64,7 @@ HEADER PART AREA
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     padding: 5px;
     font-size: 13px;
-    z-index: 5;
+    z-index: 3;
 }
 .DropdownMenu ul {
     list-style: none;
@@ -142,7 +142,7 @@ HEADER PART AREA
 SIDEBAR PART AREA
 ============================================ */
 .SidebarPart{
-    background: #fff;
+    background: #f7f7f7;
     height: 100%;
     width: 230px;
     display: flex;
@@ -705,6 +705,7 @@ ITEM TEBLE DESIGN
     background-color:rgba(0, 0, 0, 0.7); 
     top: 0;
     right: 0;
+    z-index: 5;
 }
 
 /* ============================================
@@ -712,11 +713,19 @@ ADD ITEM FORM
 ============================================ */
 
 .AddItemForm{
-    width: 100vw;
+    width: 390px;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.AddItemForm select{
+    width: 100%;
+    background-color: #e5e5e5;
+    padding: 10px;
+    margin: 5px 0px;
+    border-radius: 5px;
+    border: none;
 }
 .AddItemForm form{
     background-color: #fff;
@@ -755,11 +764,17 @@ ADD ITEM FORM
 
 .ImageArea{
     height: 200px;
-    width: 350px;
+    width: 100%;
     background-color: #b7b7b7;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-size: cover;
+    background-position: center;
+}
+.ImageAreaadderr{
+    background-color: rgba(0, 0, 0, 0.5) !important;
+    color: #fff;
 }
 .ImageArea button{
     padding: 3.5px;
@@ -812,4 +827,11 @@ ADD ITEM FORM
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+
+.SpanFlex{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
 }
