--- a/styles/ReservationPage.module.css
+++ b/styles/ReservationPage.module.css
@@ -8,7 +8,7 @@ MAIN BODY AREA
 .Gen_Background {
     width: 100vw;
     height: 100vh;
-    color: #fff;
+    color: #101b49;
     overflow: auto;
 
 }
@@ -32,31 +32,31 @@ MAIN BODY AREA
 LOGIN FORM
 ============================================ */
 .SelectionDiv{
-    background-color: rgba(0, 0, 0, 0.5); 
+    border: #858585 solid 1px;
     width: 100%;
     border-radius: 50px;
     height: 30px;
     display: flex;
     align-items: center;
     margin-bottom: 20px;
+    padding: 5px;
 }
 
 .SelectionDiv button{
     background-color: transparent; 
     width: 100%;
-    color: #fff;
+    color: #191919;
     border: none;
     border-radius: 50px;
-    height: 30px;
-    font-weight: 600;
-    transition: background-color 0.3s ease, color 0.3s ease;
+    font-weight: 500;
+    transition: background-color 0.3s ease, color 0.3s ease;    
 }
 .SelectionDiv button:hover{
-    background-color: rgba(0, 51, 255, 0.2); 
-    color: #fff;
+    color: #4591CF;
+    background-color: #b9e0ff; 
 }
 .SelectionDiv button.active {
-    background-color: #001a83; 
+    background-color: #4591CF; 
     color: white; 
 }
 
@@ -90,7 +90,7 @@ RESERVATION FORM
 }
 .ItemInformationArea label,
 .VenueInformationArea label{
-    color: #d0d0d0;
+    color: #1a1a1a;
 }
 
 
@@ -99,10 +99,6 @@ RESERVATION FORM
     width: 100%;
 }
 
-.ItemSelectionArea textarea{
-    height: 330px !important;
-    resize: none;
-}
 
 .ItemReservationForm{
     position: relative;
@@ -111,7 +107,7 @@ RESERVATION FORM
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.5); 
+    background-color: rgba(255, 255, 255); 
     border-radius: 8px;
 }
 
@@ -135,36 +131,19 @@ RESERVATION FORM
     width: 100%;
 }
 
-.ReturnBtnnnnn{
-    background-color: transparent;
-    position: absolute;
-    align-items: center;
-    color: #fff;
-    top: 10px;
-    left: 10px;
-    border: none;
-    display: flex;
-    gap: 6px;
-    font-size: 16px;
-    font-weight: 500;
-}
-.ReturnBtnnnnn:hover{
-    font-weight: bold;
-}
-
 .ItemReservationForm input,
 .ItemReservationForm select,
 .ItemReservationForm textarea,
 .ItemReservationForm time {
     margin: 10px 0px;
-    background-color: rgba(0, 0, 0, 0.5); 
-    border: none;  
+    background-color: #ffffff; 
+    border: solid #bababa 1px;
     border-radius: 5px;
     padding: 5px;
     width: 100%;
     font-size: 15px;
-    color: #ffffff;
-    color-scheme: dark !important;
+    color: #191919;
+    color-scheme: white !important;
 }
 .messagetypebox {
     resize: none; 
@@ -173,7 +152,7 @@ RESERVATION FORM
 .ItemReservationForm input:focus,
 .ItemReservationForm select:focus,
 .ItemReservationForm textarea:focus {
-    border-bottom: 1px solid #007BFF;
+    border-bottom: 2px solid #208cff;
     outline: none; 
     transition: border-bottom 0.3s ease-in-out;
 }
@@ -209,11 +188,11 @@ RESERVATION FORM
 
 .ScanQRBtn{
     margin-top: 0px;
-    font-size: 12px;
+    font-size: 12px;    
     border: none;
     background-color: transparent;
     text-decoration: underline;
-    color: #007BFF;
+    color: #0a60bd;
     transition: transform 0.3s ease, color 0.3s ease;
 }
 .ScanQRBtn:hover,
@@ -230,13 +209,13 @@ RESERVATION FORM
     border: none;
     background-color: transparent;
     font-weight: bold;
-    color: #f6f6f6;
+    color: #00346f;
     transition: transform 0.3s ease, color 0.3s ease;
 }
 .AddItemBtn:hover,
 .AddItemBtn:focus {
     transform: scale(1.03); 
-    color: #d1e7ff;
+    color: #08458c;
     border: none;
     outline: none;
 }
@@ -249,18 +228,24 @@ RESERVATION FORM
     background-color: transparent;
     text-decoration: underline;
     font-weight: 500;
-    color: #df2020;
+    color: #ff4848;
     transition: transform 0.3s ease, color 0.3s ease;
 }
 .WarningBtn:hover,
 .WarningBtn:focus {
     transform: scale(1.05); 
-    color: #ffa3a3;
+    color: #dd2727;
     border: none;
     outline: none;
 }
 
 .FlexBetweeen{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.FlexBetweeen2{
+    position: relative;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -323,7 +308,7 @@ QR SCANNER AREA
 
 
 .HasDataAlr{
-    color: #73a7df !important;
+    color: #14579f !important;
 }
 
 .BlurryBackground{
@@ -338,3 +323,132 @@ QR SCANNER AREA
     right: 0;
     z-index: 10;
 }
+
+
+.TableContainer{
+    margin: 10px 0px;
+    background-color: #ffffff; 
+    border: solid #bababa 1px;
+    border-radius: 5px;
+    padding: 5px;
+    width: 100%;
+    font-size: 15px;
+    color: #191919;
+    color-scheme: white !important;  
+    height: 330px !important;
+    resize: none;
+}
+
+
+
+.TableAreaaa{
+    background-color: #ffffff; 
+    border: solid #bababa 1px;
+    border-radius: 5px;
+    padding: 5px;
+    width: 100%;
+    font-size: 15px;
+    color: #2b2b2b;
+    border-collapse: collapse;
+}
+
+.TableAreaaa tr{
+    border: 1px solid #bababa;
+}
+.TableAreaaa td{
+    padding: 5px;
+}
+
+
+.RemoveButton{
+    background-color: #ff4848;  
+    color: #ffffff;
+    border: none;
+    border-radius: 50px;
+    font-size: 11px;
+    padding: 3px;
+    font-weight: 500;
+    transition: background-color 0.3s ease, color 0.3s ease;    
+}
+.RemoveButton:hover{
+    background-color: #ce1d1d; 
+}
+.RemoveButton.active {
+    background-color: #ce1d1d; 
+}
+
+.aligntoright{
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+
+
+
+/*
+WARNING DROPDOWN BOX DESIGN
+*/
+
+/* Basic dropdown container */
+.ConflictDropdown {
+    position: absolute;
+    bottom: 20px; 
+    left: 0;
+    right: 0;
+    max-height: 300px; 
+    overflow-y: auto;
+    background-color: #ffbcbc;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1; /* Ensure dropdown appears on top */
+    padding: 10px;
+
+  }
+  
+  .ConflictDropdown ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .ConflictDropdown li {
+    padding: 10px;
+    border-bottom: 1px solid #da2e2e;
+    font-size: 14px;
+    color: #902828;
+  }
+  
+  .ConflictDropdown li:last-child {
+    border-bottom: none; /* Remove border on the last item */
+  }
+  
+  .ConflictDropdown strong {
+    font-weight: 500;
+    color: #831111;
+  }
+  
+
+
+  .FormCloseButton{
+    width: 30px !important;
+    height: 30px !important;
+    background-color: #b21414 !important;
+    line-height: 0px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 10px;
+    color: #fff;
+    border-radius: 5px;
+    font-weight: bold;
+    border: none;
+    transition: background-color 0.3s ease, transform 0.2s ease; /* Adds smooth transition for hover/focus */
+}
+.FormCloseButton:focus,
+.FormCloseButton:hover
+{
+    box-shadow: 0 0 0 3px rgba(253, 42, 0, 0.0) !important;
+    background-color: #920e0e !important;
+}
+
