--- a/styles/User.module.css
+++ b/styles/User.module.css
@@ -6,7 +6,7 @@
 MAIN BODY AREA
 ============================================ */
 .Gen_Body{
-    background-color: #e8e8e8;
+    background-color: #fff; /* e8e8e8 */
     height: 100vh;
     width: 100vw;
     color: black;
@@ -20,12 +20,12 @@ MAIN BODY AREA
 HEADER PART AREA
 ============================================ */
 .HeaderPart{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); 
     display: flex;
     justify-content:space-between;
     align-items: center;
     padding: 0px 10px;
     background-color: #fff;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.05); 
     height: 60px;
     width: 100%;
 }
@@ -100,6 +100,15 @@ HEADER PART AREA
     .HeaderPart{
         justify-content:space-between;
     } 
+    .ImageArea{
+        height: 150px;
+        width: 310px;
+        background-color: #b7b7b7;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-size: cover;
+    }
 }
 .NotifBox{
     z-index: 5;
@@ -320,6 +329,7 @@ DASHBOARD AREA
 }
 
 .UpperSquares div{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); 
     background-color: #fff;
     color: #0a1f48;
     padding: 20px;
@@ -354,6 +364,8 @@ DASHBOARD AREA
     gap: 10px;
     width: 100%;
     height: 500px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); 
+
 }
 
 .DashTable {
@@ -367,7 +379,6 @@ DASHBOARD AREA
     color: #000;
     padding: 10px;
     text-align: left;
-    border: 1px solid #ddd;
     font-size: 12px;
     height: 30px !important; /* Apply height to th and td */
     overflow: hidden;
@@ -375,12 +386,15 @@ DASHBOARD AREA
     white-space: nowrap; 
 
 }
+.DashTable tr{
+    border: 1px solid #dddddd;
+}
 
 .DashTable th {
     position: sticky;
     top: 0;
     z-index: 1;
-    background-color: #f4f4f4;
+    background-color: #ffffff;
     font-weight: bold;
     color: #333;
     padding: 5px;
@@ -398,11 +412,11 @@ DASHBOARD AREA
 }
 
 .DashTable tr:nth-child(even) {
-    background-color: #f4f4f4;
+    background-color: #fff;
 }
 
 .DashTable tr:nth-child(odd) {
-    background-color: #e9e9e9;
+    background-color: #fff;
 }
 
 .DashTable button {
@@ -475,9 +489,9 @@ ITEM AREA
 .SearchBarrrr {  
     padding: 2px 15px;
     font-size: 13px;  
-    border: 2px solid #979797;  
+    border: 2px solid #bcbcbc;  
     border-radius: 30px; 
-    background-color: #f5f5f5; 
+    background-color: #ffffff; 
     outline: none;
     transition: all 0.3s ease-in-out;  
     color: #000;
@@ -702,6 +716,7 @@ ITEM TEBLE DESIGN
 
 
 .BlurryBackground{
+    backdrop-filter: blur(10px);
     width: 100vw;
     height: 100vh;
     position: absolute;
@@ -735,26 +750,65 @@ ADD ITEM FORM
     padding: 10px;
 }
 .AddItemForm input{
+    border: none;
+    border-bottom: 1px solid #7eb8e2;
     width: 100%;
-    background-color: #e5e5e5;
     padding: 10px;
     margin: 5px 0px;
     border-radius: 5px;
+}
+.AddItemForm input:focus,
+.AddItemForm input:hover{
     border: none;
+    outline: none; 
+    border-bottom: 1px solid #04375b;
+}
+
+.SpanUpper{
+    margin-top: 30px;
+    }
+
+.AddItemForm label{
+    font-size: 10px;
+    line-height: 1px;
 }
 .AddItemForm select{
     width: 100%;
-    background-color: #e5e5e5;
+    border: none;
+    outline: none; 
+    border-bottom: 1px solid #7eb8e2;
     padding: 10px;
     margin: 5px 0px;
     border-radius: 5px;
+}
+.AddItemForm select:focus,
+.AddItemForm select:hover{
     border: none;
+    outline: none; 
+    border-bottom: 1px solid #04375b;
 }
 
 .CenterItemDIV{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.SpanHeader{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.FormCloseButton{
+    width: 30px !important;
+    height: 30px !important;
+    background-color: #b21414 !important;
+    line-height: 0px;
+}
+.FormCloseButton:focus,
+.FormCloseButton:hover
+{
+    box-shadow: 0 0 0 3px rgba(253, 42, 0, 0.0) !important;
+    background-color: #920e0e !important;
 }
 
 
@@ -783,17 +837,27 @@ ADD ITEM FORM
     box-shadow: 0 0 0 3px rgba(4, 46, 255, 0.5);
 }
 
-
+.ResponsiveAligner{
+    display: flex;
+    flex-direction: row;
+}
+@media (max-width: 600px) {
+    .ResponsiveAligner{
+        flex-direction: column;
+    } 
+}
 .FieldsArea{
     display: flex;
     gap: 10px;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     width: 100%;
-    background-color: #e5e5e5;
+    background-color: #fff;
+    border: none;
+    border-bottom: 1px solid #59595a;
     padding: 10px;
     margin: 5px 0px;
     border-radius: 5px;
-    border: none;
 }
 
 .AddItemForm button {
@@ -817,10 +881,19 @@ ADD ITEM FORM
     background-color: #0f5490; 
     box-shadow: 0 0 0 3px rgba(19, 142, 203, 0.5);
 }
+.Spaneexx{
+    width: 300px;
+}
 
+.RightAreaa{
+    width: 350px;
+}
+.RightAreaa2{
+    width: 300px;
+}
 .ImageArea{
-    height: 150px;
-    width: 310px;
+    height: 264px;
+    width: 250px;
     background-color: #b7b7b7;
     display: flex;
     align-items: center;
@@ -891,10 +964,12 @@ ADD ITEM FORM
     background-color: #fff;
     border-radius: 5px;
     padding: 10px;
+    width: 355px;
 }
 
 .Formmm h4{
-    color: #181818;
+    color: #00145a;
+    font-size: 20px;
 }
 .Formmm p{
     color: #181818;
@@ -927,21 +1002,83 @@ ADD ITEM FORM
 }
 
 .ItemBoxxxSelected{
-    background-color: #19e412;
+    background-color: #50b0e1;
 }
 
 .SelectedItemDetails p,
 .SelectedItemDetails h5,
 .SelectedItemDetails label {
-    color: #141414;
+    color: #00145a;
 }
 
 .SelectedItemDetails{
     display: flex;
     flex-direction: column;
 }
+.SelectedItemDetails input{
+    padding: 2px 15px;
+    font-size: 13px;  
+    border: 2px solid #979797;  
+    border-radius: 30px; 
+    background-color: #f5f5f5; 
+    outline: none;
+    transition: all 0.3s ease-in-out;  
+    color: #000;
+}
 
 .SpanFlexx{
     display: flex;
     justify-content:space-between;
+}
+
+.SpanFlexx2{
+    display: flex;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.ExitButtoonnn{
+    background-color: #ce2d2d;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 3px 10px;
+}
+
+
+
+.SearchBarrr{
+    width: 100%;  
+    margin: 10px 0px;
+    padding: 2px 15px;
+    font-size: 13px;  
+    border: 2px solid #979797;  
+    border-radius: 1px; 
+    background-color: #f5f5f5; 
+    outline: none;
+    transition: all 0.3s ease-in-out;  
+    color: #000;
+}
+
+
+.SubmitButtonnn {
+    width: 100%;
+    background-color: #138ecb;
+    color: #fff;
+    padding: 10px;
+    margin: 5px 0px;
+    border-radius: 5px;
+    font-weight: bold;
+    border: none;
+    transition: background-color 0.3s ease, transform 0.2s ease; /* Adds smooth transition for hover/focus */
+}
+
+.SubmitButtonnn:hover {
+    background-color: #106ba3; 
+}
+
+.SubmitButtonnn:focus {
+    outline: none; 
+    background-color: #0f5490; 
+    box-shadow: 0 0 0 3px rgba(19, 142, 203, 0.5);
 }
