--- a/styles/Loginpage.module.css
+++ b/styles/Loginpage.module.css
@@ -21,6 +21,16 @@ MAIN BODY AREA
 
 
 
+.secondLayer{
+    box-shadow: 0 0 5px rgba(0, 0, 0, 1);
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(3px);
+}
+
 
 /* ============================================
 LOGIN FORM
