--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -24,10 +24,11 @@ HEADER PART AREA
     justify-content: flex-end; 
     align-items: center;
     padding: 0px 10px;
-    background: linear-gradient(to right, #1a2866, #101b49);
+    background: #fff;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.05); 
     height: 60px;
     width: 100%;
+    border-radius: 7px;
 }
 
 .HeaderProfilePart{
@@ -43,21 +44,21 @@ HEADER PART AREA
     cursor: pointer;
 }
 .HeaderProfilePart img:hover{
-    border: 1px solid #ffffff; 
+    border: 1px solid #000742; 
 }
 .HeaderProfilePart img.ProfileOpened{
-    border: 2px solid #ffffff; 
+    border: 2px solid #000742; 
     transform: scale(1.1);
 }
 .HeaderProfilePart p{
     font-size: 13px;
     margin-right: 10px;   
-    color: #fff;
+    color: #000742;
 }
 .DropdownMenu {
     position: absolute;
-    top: 50px;
-    right: 10px;
+    top: 83px;
+    right: 40px;
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -142,7 +143,7 @@ HEADER PART AREA
 SIDEBAR PART AREA
 ============================================ */
 .SidebarPart{
-    background: #f7f7f7;
+    background: linear-gradient(to bottom, #1a2866, #101b49);
     height: 100%;
     width: 230px;
     display: flex;
@@ -168,7 +169,7 @@ SIDEBAR PART AREA
     width: 40px;
 }
 .mainLogo h2{
-    color: #000742;
+    color: #fff;
     padding-left: 10px;
     font-size: 33px;
     font-weight: 400;
@@ -178,7 +179,7 @@ SIDEBAR PART AREA
     align-items: center;
     justify-content: flex-start;
     background-color: transparent; 
-    color: #000742;
+    color: #fff;
     width: 95%;
     padding: 10px;
     margin-top: 10px;
@@ -189,8 +190,7 @@ SIDEBAR PART AREA
 }
 
 .SidebarPart button.active {
-    background-color: #e9e9e9; 
-    color: #000742; 
+    background-color: #161a41;  
     font-weight: bolder;
 }
 
@@ -198,7 +198,7 @@ SIDEBAR PART AREA
     margin-right: 8px; 
 }
 .SidebarToggler{
-    background-color: rgba(0, 0, 0, 0.1) !important;
+    background-color: rgba(0, 0, 0, 0.2) !important;
     width: 50px !important;
     height: 50px !important;
     text-align: center;
@@ -227,7 +227,7 @@ SIDEBAR PART AREA
 .BurgerIcon{
     display: none;
     background-color: transparent;
-    color: #ffffff;
+    color: #000742;
     border: none;
 }
 
@@ -252,6 +252,7 @@ BODY AREA
 .RightSideArea{
     background-color: transparent;
     width: 100%;
+    padding: 30px;
     height: 100%;
 }
 .BodyArea{
